<?xml version="1.0"?>
<package format="3">
  <name>my_simple_robot</name>
  <version>0.0.1</version>
  <description>Simple ROS 2 robot URDF + talker example</description>
  <maintainer email="kanistokevin007@gmail.com">Kanisto kevin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
